# snake-ng

./: .clang-format  .gitignore  CMakeLists.txt  README.md  env  flake.nix  fruit.c  fruit.h  main.c  param.h  render.c  render.h  snake.c  snake.h  state.c  state.h  strings.h  struct.h
